embed slide content

--- a/embeds-slides/tutorial-testing.html
+++ b/embeds-slides/tutorial-testing.html
@@ -36,6 +36,42 @@
 <body>
     <div class="reveal">
         <div class="slides">
+            <section>
+                <div class="col s12 m7">
+                    <h2 class="header">Horizontal Card</h2>
+                    <div class="card horizontal">
+                        <div class="card-image"> <img src="http://lorempixel.com/100/190/nature/6"> </div>
+                        <div class="card-stacked">
+                            <div class="card-content">
+                                <p>I am a very simple card. I am good at containing small bits of information.</p>
+                            </div>
+                            <div class="card-action"> <a href="#">This is a link</a> </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section style="text-align: left;">
+                <div class="row">
+                    <div class="col s12 m12">
+                        <div class="card grey lighten-4">
+                            <div class="card-content"><span class="card-title">Card Title</span>
+                                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                            </div>
+                            <div class="card-action"> <a href="#"><i class="material-icons">ondemand_video</i></a> <a href="#">This is a link</a> </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12 m11">
+                        <div class="card grey darken-3">
+                            <div class="card-content white-text"><span class="card-title">Card Title</span>
+                                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                            </div>
+                            <div class="card-action"> <a href="#"><i class="material-icons">ondemand_video</i></a> <a href="#">This is a link</a> </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section style="text-align: left;">
                 <h3>Start with Questions</h3>
                 <p class="intro"><span class="dropcap">Q</span>uestions drive research. The most rewarding research projects start with questions you care about and want to explore.</p> <img class="responsive-img materialboxed" src="https://dmcwo.github.io/research-tips/assets/img/content/question-map-examples.jpg" alt="Example question maps" data-caption="Example question maps"> </section>
