--- a/index.html
+++ b/index.html
@@ -2,13 +2,6 @@
 layout: home
 title: Research Tips
 ---
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+Looking for help with research and writing? These quick and practical tips were collaborively designed by students, faculty, librarians, and academic support staff across the UCLA campus.
 
-  ga('create', 'UA-87388899-2', 'auto');
-  ga('send', 'pageview');
-
-</script>
+Let us know your [questions, feedback, and ideas for future projects](https://goo.gl/forms/5mDfPqk838jzhB9X2)!
