--- a/assets/animation/elevator-speech.html
+++ b/assets/animation/elevator-speech.html
@@ -16,15 +16,15 @@
 	</style>
 	<!-- copy these lines to your document head: -->
 
-	<meta name="viewport" content="user-scalable=yes, width=600" />
+	<meta name="viewport" content="user-scalable=yes, width=900" />
 
 	<!-- end copy -->
   </head>
   <body>
 	<!-- copy these lines to your document: -->
 
-	<div id="elevatorspeech_hype_container" style="margin:auto;position:relative;width:600px;height:400px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="elevator-speech.hyperesources/elevatorspeech_hype_generated_script.js?57830"></script>
+	<div id="elevatorspeech_hype_container" style="margin:auto;position:relative;width:900px;height:400px;overflow:hidden;">
+		<script type="text/javascript" charset="utf-8" src="elevator-speech.hyperesources/elevatorspeech_hype_generated_script.js?74884"></script>
 	</div>
 
 	<!-- end copy -->
@@ -39,12 +39,12 @@
 		<div>WHY: Why is your research
 significant?
 </div>
+		<div></div>
 		<div>WHO: Who are you?
 </div>
 		<div>2</div>
 		<div>WHAT: What is your research?
 </div>
-		<div></div>
 		<div>3</div>
 		<div>WHERE: Where are you pursuing
 your research?
@@ -54,6 +54,59 @@ your research?
 what you do
 </div>
 		<div>5</div>
+		<div>WHO
+Introduce your name and 
+identity as an academic and
+researcher. 
+</div>
+		<div>Example: “My name is…and I’m a second year
+student at UCLA. I’m interested in history, 
+specifically the early modern period…"
+</div>
+		<div>Example: “I’m a senior Biology major
+and was a research assistnat in
+a lab…"
+</div>
+		<div>Example: “I study…” or “My research project 
+is about…” or “I’m looking at…” or “I'm
+interested in…"
+</div>
+		<div>WHAT
+Think about what you do. What
+is your research topic or question? 
+</div>
+		<div>WHERE
+Where are you pursuing your
+research?
+</div>
+		<div>Example: “…” with a professor in the Psychology
+Department…” or “…as a part of my scholarship
+program…"
+</div>
+		<div>WHEN
+Include key dates and time periods
+related to your research. 
+</div>
+		<div>Example: “I started on this research project…”
+or “The grant got funded in 20XX"
+</div>
+		<div>WHY
+This section is incredibly important and 
+will probably carry the weight of your
+elevator speech. 
+
+</div>
+		<div>It answers:
+-Why should your audience care about your
+research?-Why is your research significant?
+</div>
+		<div>Think about what your research adds to the 
+existing knowledge in your field. What makes
+it different from previous studies?
+</div>
+		<div>Example: “This project explores an area
+currently overlooked…"
+</div>
 
 	</div>
 
