--- a/assets/animation/abstract-animation.html
+++ b/assets/animation/abstract-animation.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="abstractanimation_hype_container" style="margin:auto;position:relative;width:800px;height:600px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="abstract-animation.hyperesources/abstractanimation_hype_generated_script.js?91566"></script>
+		<script type="text/javascript" charset="utf-8" src="abstract-animation.hyperesources/abstractanimation_hype_generated_script.js?76487"></script>
 	</div>
 
 	<!-- end copy -->
@@ -41,25 +41,29 @@ Sciences
 </div>
 		<div>Humanities</div>
 		<div>Arts</div>
+		<div>Choose one of the field of studies below to view a sample abstract and a deconstruction of its components.</div>
 		<div>Social 
 Sciences
 </div>
+		<div>Click to learn what a research abstract is</div>
+		<div>Results</div>
+		<div>Conclusions</div>
+		<div>Life Sciences Sample Abstract</div>
+		<div>Approach/
+Methodology
+</div>
+		<div>Tekin, E., Beppler, C., White, C., Mao, Z., Savage, V. M., & Yeh, P. J. (2016). Enhanced identification of synergistic and antagonistic emergent interactions among three or more drugs. Journal of The Royal Society Interface, 13(119) </div>
+		<div>Research Question</div>
+		<div>Title</div>
 		<div>Click to return to home</div>
 		<div>Interactions among drugs play a critical role in the killing efficacy of multi-drug treatments. Recent advances in theory and experiment for three-drug interactions enable the search for emergent interactions—ones not predictable from pairwise interactions. Previous work has shown it is easier to detect synergies and antagonisms among pairwise interactions when a rescaling method is applied to the interaction metric. However, no study has carefully examined whether new types of normalization might be needed for emergence. Here, we propose several rescaling methods for enhancing the classification of the higher order drug interactions based on our conceptual framework. To choose the rescaling that best separates synergism, antagonism and additivity, we conducted bacterial growth experiments in the presence of single, pairwise and triple-drug combinations among 14 antibiotics. We found one of our rescaling methods is far better at distinguishing synergistic and antagonistic emergent interactions than any of the other methods. Using our new method, we find around 50% of emergent interactions are additive, much less than previous reports of greater than 90% additivity. We conclude that higher order emergent interactions are much more common than previously believed, and we argue these findings for drugs suggest that appropriate rescaling is crucial to infer higher order interactions.
 
 </div>
-		<div>Life Sciences Sample Abstract</div>
-		<div>Tekin, E., Beppler, C., White, C., Mao, Z., Savage, V. M., & Yeh, P. J. (2016). Enhanced identification of synergistic and antagonistic emergent interactions among three or more drugs. Journal of The Royal Society Interface, 13(119) </div>
-		<div>Research Question</div>
 		<div>This study examines how retaining an immigrant culture affects school dropout rates among Vietnamese, Koreans, Chinese, Filipinos, Japanese, Mexicans, Puerto Ricans, and Cubans. I use 1990 Census data to analyze how language use, household language, and presence of immigrants in the household affect dropping out of school. Overall, I found that these measures have similar effects on these diverse groups: bilingual students are less likely to drop out than English-only speakers, students in bilingual households are less likely to drop out than those in English-dominant or English-limited households, and students in immigrant households are less likely to drop out than those in nonimmigrant households. These findings suggest that those who enjoy the greatest educational success are not those who have abandoned their ethnic cultures and are most acculturated. Rather, bicultural youths who can draw resources from both the immigrant community and mainstream society are best situated to enjoy educational success. 
 EndFragment</div>
-		<div>Results</div>
+		<div>The Benefits of Biculturalism: Exposure to Immigrant Culture and Dropping out of School Among Asian and Lation Youths</div>
 		<div>Social Sciences Sample Abstract</div>
 		<div>Feliciano, C. (2001). The Benefits of Biculturalism: Exposure to Immigrant Culture and Dropping out of School among Asian and Latino Youths. Social Science Quarterly, 82(4), 865-879. </div>
-		<div>Approach/
-Methodology
-</div>
-		<div>Conclusions</div>
 		<div>Humanities Sample Abstract</div>
 		<div>Arts Sample Abstract</div>
 		<div>RESEARCH QUESTION: State your research hypothesis/argument/question here. In this section, you should present the goal of your research. 
@@ -74,10 +78,27 @@ EndFragment</div>
 EndFragment</div>
 		<div>RESULTS: State the results/findings of your research. Here, the researchers summarized their main findings on how language use, household language and the presence of immigrants in the household affect the risk of dropping out of school for various groups. 
 </div>
-		<div>CONCLUSIONS: What do your findings mean? Discuss the larger implications of your findings. You should think about what makes your research significant. 
+		<div>CONCLUSIONS: What do your findings mean? Discuss the larger implications of your findings. You should think about what makes your research significant. If you are writing an abstract for a project where conclusions are not yet known, this section can include future considerations or expected results.
 </div>
 		<div>This study examines how retaining an immigrant culture affects school dropout rates among Vietnamese, Koreans, Chinese, Filipinos, Japanese, Mexicans, Puerto Ricans, and Cubans. I use 1990 Census data to analyze how language use, household language, and presence of immigrants in the household affect dropping out of school. Overall, I found that these measures have similar effects on these diverse groups: bilingual students are less likely to drop out than English-only speakers, students in bilingual households are less likely to drop out than those in English-dominant or English-limited households, and students in immigrant households are less likely to drop out than those in nonimmigrant households. These findings suggest that those who enjoy the greatest educational success are not those who have abandoned their ethnic cultures and are most acculturated. Rather, bicultural youths who can draw resources from both the immigrant community and mainstream society are best situated to enjoy educational success. 
 EndFragment</div>
+		<div>What is a Research Abstract?</div>
+		<div>When you apply to present your work as a paper or poster, you typically have to submit an abstract. Many conferences select participants based primarily on their abstract. When you submit a paper to a journal for publication, you also usually submit an abstract, which accompanies the paper. 
+</div>
+		<div>An abstract is a one-paragraph summary of a research project that includes:
+</div>
+		<div>Click to view sample abstracts
+</div>
+		<div>1. An argument or research question
+2. Methodology or conceptual framework
+3. Results or findings
+4. Significance of the findings
+</div>
+		<div>An abstract is essentially a snapshot of your research project. It describes your research question or argument, the components and methodology of your project, and the significance of your project. 
+</div>
+		<div>The Benefits of Biculturalism: Exposure to Immigrant Culture and Dropping out of School Among Asian and Lation Youths</div>
+		<div>TITLE: The title should provide a clear description of the research topic. You may find it helpful to use descriptive words and phrases. It is important to keep in mind that your work may be categorized according to its title.
+</div>
 
 	</div>
 
