--- a/assets/animation/abstract-animation.html
+++ b/assets/animation/abstract-animation.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="abstractanimation_hype_container" style="margin:auto;position:relative;width:800px;height:600px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="abstract-animation.hyperesources/abstractanimation_hype_generated_script.js?43153"></script>
+		<script type="text/javascript" charset="utf-8" src="abstract-animation.hyperesources/abstractanimation_hype_generated_script.js?43291"></script>
 	</div>
 
 	<!-- end copy -->
@@ -39,12 +39,14 @@
 		<div>Social 
 Sciences
 </div>
+		<div></div>
 		<div>Life 
 Sciences
 </div>
 		<div>Research Abstracts</div>
-		<div>Arts</div>
-		<div></div>
+		<div>Physical
+Sciences
+</div>
 		<div>Click to learn what a research abstract is</div>
 		<div>Humanities</div>
 		<div>Results</div>
@@ -66,8 +68,6 @@ Methodology
 EndFragment</div>
 		<div>Feliciano, C. (2001). The Benefits of Biculturalism: Exposure to Immigrant Culture and Dropping out of School among Asian and Latino Youths. Social Science Quarterly, 82(4), 865-879. </div>
 		<div>Social Sciences Sample Abstract</div>
-		<div>Humanities Sample Abstract</div>
-		<div>Arts Sample Abstract</div>
 		<div>An abstract is a one-paragraph summary of a research project that includes:
 </div>
 		<div>What is a Research Abstract?</div>
@@ -116,6 +116,39 @@ EndFragment</div>
 </div>
 		<div>This study examines how retaining an immigrant culture affects school dropout rates among Vietnamese, Koreans, Chinese, Filipinos, Japanese, Mexicans, Puerto Ricans, and Cubans. I use 1990 Census data to analyze how language use, household language, and presence of immigrants in the household affect dropping out of school. Overall, I found that these measures have similar effects on these diverse groups: bilingual students are less likely to drop out than English-only speakers, students in bilingual households are less likely to drop out than those in English-dominant or English-limited households, and students in immigrant households are less likely to drop out than those in nonimmigrant households. These findings suggest that those who enjoy the greatest educational success are not those who have abandoned their ethnic cultures and are most acculturated. Rather, bicultural youths who can draw resources from both the immigrant community and mainstream society are best situated to enjoy educational success. 
 EndFragment</div>
+		<div>Physical Sciences Sample Abstract</div>
+		<div>Hees, A., Do, T., Ghez, A. M., Martinez, G. D., Naoz, S., Becklin, E. E., ... Witzel, G. (2017). Testing General Relativity with Stellar Orbits around the Supermassive Black Hole in Our Galactic Center. Physical review letters, 118(21), 211101-. </div>
+		<div>Testing General Relativity with Stellar Orbits around the Supermassive Black Hole in our Galactic Center </div>
+		<div>We demonstrate that short-period stars orbiting around the supermassive black hole in our Galactic center can successfully be used to probe the gravitational theory in a strong regime. We use 19 years of observations of the two best measured short-period stars orbiting our Galactic center to constrain a hypothetical fifth force that arises in various scenarios motivated by the development of a unification theory or in some models of dark matter and dark energy. No deviation from general relativity is reported and the fifth force strength is restricted to an upper 95% confidence limit of |α| < 0.016 at a length scale of λ = 150 astronomical units. We also derive a 95% 
+confidence upper limit on a linear drift of the argument of periastron of the short-period
+star S0-2 of |ωS0-2| < 1.6 × 10−3 rad=yr, which can be used to constrain various 
+gravitational and astrophysical theories. This analysis provides the first fully self-consistent test of the gravitational theory using orbital dynamic in a strong 
+gravitational regime, that of a supermassive blackhole. A sensitivity analysis for futuremeasurements is also presented.EndFragment</div>
+		<div>Testing General Relativity with Stellar Orbits around the Supermassive Black Hole in our Galactic Center </div>
+		<div>We demonstrate that short-period stars orbiting around the supermassive black hole in our Galactic center can successfully be used to probe the gravitational theory in a strong regime. We use 19 years of observations of the two best measured short-period stars orbiting our Galactic center to constrain a hypothetical fifth force that arises in various scenarios motivated by the development of a unification theory or in some models of dark matter and dark energy. No deviation from general relativity is reported and the fifth force strength is restricted to an upper 95% confidence limit of |α| < 0.016 at a length scale of λ = 150 astronomical units. We also derive a 95% 
+confidence upper limit on a linear drift of the argument of periastron of the short-period
+star S0-2 of |ωS0-2| < 1.6 × 10−3 rad=yr, which can be used to constrain various 
+gravitational and astrophysical theories. This analysis provides the first fully self-consistent test of the gravitational theory using orbital dynamic in a strong 
+gravitational regime, that of a supermassive blackhole. A sensitivity analysis for futuremeasurements is also presented.EndFragment</div>
+		<div>APPROACH/METHODOLOGY: Explain briefly how you obtained your results. In this example, the researchers used 19 years of observations of the two best measured short-period stars orbiting the Galactic center. 
+</div>
+		<div>We demonstrate that short-period stars orbiting around the supermassive black hole in our Galactic center can successfully be used to probe the gravitational theory in a strong regime. We use 19 years of observations of the two best measured short-period stars orbiting our Galactic center to constrain a hypothetical fifth force that arises in various scenarios motivated by the development of a unification theory or in some models of dark matter and dark energy. No deviation from general relativity is reported and the fifth force strength is restricted to an upper 95% confidence limit of |α| < 0.016 at a length scale of λ = 150 astronomical units. We also derive a 95% 
+confidence upper limit on a linear drift of the argument of periastron of the short-period
+star S0-2 of |ωS0-2| < 1.6 × 10−3 rad=yr, which can be used to constrain various 
+gravitational and astrophysical theories. This analysis provides the first fully self-consistent test of the gravitational theory using orbital dynamic in a strong 
+gravitational regime, that of a supermassive blackhole. A sensitivity analysis for futuremeasurements is also presented.EndFragment</div>
+		<div>We demonstrate that short-period stars orbiting around the supermassive black hole in our Galactic center can successfully be used to probe the gravitational theory in a strong regime. We use 19 years of observations of the two best measured short-period stars orbiting our Galactic center to constrain a hypothetical fifth force that arises in various scenarios motivated by the development of a unification theory or in some models of dark matter and dark energy. No deviation from general relativity is reported and the fifth force strength is restricted to an upper 95% confidence limit of |α| < 0.016 at a length scale of λ = 150 astronomical units. We also derive a 95% 
+confidence upper limit on a linear drift of the argument of periastron of the short-period
+star S0-2 of |ωS0-2| < 1.6 × 10−3 rad=yr, which can be used to constrain various 
+gravitational and astrophysical theories. This analysis provides the first fully self-consistent test of the gravitational theory using orbital dynamic in a strong 
+gravitational regime, that of a supermassive blackhole. A sensitivity analysis for futuremeasurements is also presented.EndFragment</div>
+		<div>RESULTS: State the results/findings of your research. Here, the researchers summarized their main findings and confidence limits. 
+</div>
+		<div>We demonstrate that short-period stars orbiting around the supermassive black hole in our Galactic center can successfully be used to probe the gravitational theory in a strong regime. We use 19 years of observations of the two best measured short-period stars orbiting our Galactic center to constrain a hypothetical fifth force that arises in various scenarios motivated by the development of a unification theory or in some models of dark matter and dark energy. No deviation from general relativity is reported and the fifth force strength is restricted to an upper 95% confidence limit of |α| < 0.016 at a length scale of λ = 150 astronomical units. We also derive a 95% 
+confidence upper limit on a linear drift of the argument of periastron of the short-period
+star S0-2 of |ωS0-2| < 1.6 × 10−3 rad=yr, which can be used to constrain various 
+gravitational and astrophysical theories. This analysis provides the first fully self-consistent test of the gravitational theory using orbital dynamic in a strong 
+gravitational regime, that of a supermassive blackhole. A sensitivity analysis for futuremeasurements is also presented.EndFragment</div>
 
 	</div>
 
