--- a/assets/animation/abstract-animation.html
+++ b/assets/animation/abstract-animation.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="abstractanimation_hype_container" style="margin:auto;position:relative;width:800px;height:600px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="abstract-animation.hyperesources/abstractanimation_hype_generated_script.js?43291"></script>
+		<script type="text/javascript" charset="utf-8" src="abstract-animation.hyperesources/abstractanimation_hype_generated_script.js?81436"></script>
 	</div>
 
 	<!-- end copy -->
@@ -35,7 +35,7 @@
 
 	<div style="display:none" aria-hidden=true>
 
-		<div>Choose one of the field of studies below to view a sample abstract and a deconstruction of its components.</div>
+		<div>Choose one of the fields of study below to view a sample abstract and a deconstruction of its components.</div>
 		<div>Social 
 Sciences
 </div>
@@ -138,17 +138,14 @@ star S0-2 of |ωS0-2| < 1.6 × 10−3 rad=yr, which can be used to constrain var
 gravitational and astrophysical theories. This analysis provides the first fully self-consistent test of the gravitational theory using orbital dynamic in a strong 
 gravitational regime, that of a supermassive blackhole. A sensitivity analysis for futuremeasurements is also presented.EndFragment</div>
 		<div>We demonstrate that short-period stars orbiting around the supermassive black hole in our Galactic center can successfully be used to probe the gravitational theory in a strong regime. We use 19 years of observations of the two best measured short-period stars orbiting our Galactic center to constrain a hypothetical fifth force that arises in various scenarios motivated by the development of a unification theory or in some models of dark matter and dark energy. No deviation from general relativity is reported and the fifth force strength is restricted to an upper 95% confidence limit of |α| < 0.016 at a length scale of λ = 150 astronomical units. We also derive a 95% 
-confidence upper limit on a linear drift of the argument of periastron of the short-period
-star S0-2 of |ωS0-2| < 1.6 × 10−3 rad=yr, which can be used to constrain various 
-gravitational and astrophysical theories. This analysis provides the first fully self-consistent test of the gravitational theory using orbital dynamic in a strong 
+confidence upper limit on a linear drift of the argument of periastron of the short-periodstar S0-2 of |ωS0-2| < 1.6 × 10−3 rad=yr, which can be used to constrain various gravitational and astrophysical theories. This analysis provides the first fully self-consistent test of the gravitational theory using orbital dynamic in a strong 
 gravitational regime, that of a supermassive blackhole. A sensitivity analysis for futuremeasurements is also presented.EndFragment</div>
 		<div>RESULTS: State the results/findings of your research. Here, the researchers summarized their main findings and confidence limits. 
 </div>
 		<div>We demonstrate that short-period stars orbiting around the supermassive black hole in our Galactic center can successfully be used to probe the gravitational theory in a strong regime. We use 19 years of observations of the two best measured short-period stars orbiting our Galactic center to constrain a hypothetical fifth force that arises in various scenarios motivated by the development of a unification theory or in some models of dark matter and dark energy. No deviation from general relativity is reported and the fifth force strength is restricted to an upper 95% confidence limit of |α| < 0.016 at a length scale of λ = 150 astronomical units. We also derive a 95% 
 confidence upper limit on a linear drift of the argument of periastron of the short-period
 star S0-2 of |ωS0-2| < 1.6 × 10−3 rad=yr, which can be used to constrain various 
-gravitational and astrophysical theories. This analysis provides the first fully self-consistent test of the gravitational theory using orbital dynamic in a strong 
-gravitational regime, that of a supermassive blackhole. A sensitivity analysis for futuremeasurements is also presented.EndFragment</div>
+gravitational and astrophysical theories. This analysis provides the first fully self-consistent test of the gravitational theory using orbital dynamic in a strong gravitational regime, that of a supermassive blackhole. A sensitivity analysis for futuremeasurements is also presented.EndFragment</div>
 
 	</div>
 
