--- a/assets/animation/abstract-animation.html
+++ b/assets/animation/abstract-animation.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="abstractanimation_hype_container" style="margin:auto;position:relative;width:800px;height:600px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="abstract-animation.hyperesources/abstractanimation_hype_generated_script.js?22234"></script>
+		<script type="text/javascript" charset="utf-8" src="abstract-animation.hyperesources/abstractanimation_hype_generated_script.js?71080"></script>
 	</div>
 
 	<!-- end copy -->
@@ -35,11 +35,9 @@
 
 	<div style="display:none" aria-hidden=true>
 
-		<div>Choose one of the fields of study below to view a sample abstract and a deconstruction of its components.</div>
 		<div>Social 
 Sciences
 </div>
-		<div></div>
 		<div>Life 
 Sciences
 </div>
@@ -47,7 +45,10 @@ Sciences
 		<div>Physical
 Sciences
 </div>
-		<div>Click to learn what a research abstract is</div>
+		<div>Click here to read some tips on how to write an effective abstract</div>
+		<div>Click here to learn what a research abstract is</div>
+		<div></div>
+		<div>Choose one of the fields of study below to view a sample abstract and a deconstruction of its components.</div>
 		<div>Humanities</div>
 		<div>Results</div>
 		<div>Tekin, E., Beppler, C., White, C., Mao, Z., Savage, V. M., & Yeh, P. J. (2016). Enhanced identification of synergistic and antagonistic emergent interactions among three or more drugs. Journal of The Royal Society Interface, 13(119) </div>
@@ -80,6 +81,7 @@ EndFragment</div>
 </div>
 		<div>When you apply to present your work as a paper or poster, you typically have to submit an abstract. Many conferences select participants based primarily on their abstract. When you submit a paper to a journal for publication, you also usually submit an abstract, which accompanies the paper. 
 </div>
+		<div>Click to read some tips on how to write an effective abstract</div>
 		<div>Enhanced identification of synergistic and antagonistic emergent interactions among three or more drugs</div>
 		<div>TITLE: The title should provide a clear description of the research topic. You may find it helpful to use descriptive words and phrases. It is important to keep in mind that your work may be categorized according to its title.
 </div>
@@ -164,6 +166,36 @@ EndFragment</div>
 </div>
 		<div>In this paper, we re-examine the notion of non-restrictive relative clauses (NRRCs) in the light of spoken corpus evidence, based on an analysis of 692 occurrences of non-restrictive which-clauses in British and American spoken English data. After reviewing traditional conceptions of NRRCs and some recent work on the broader notion of subordination in spoken grammar, we discuss the problem of identifying such clauses. We then present examples from our corpora and a concordance-based analysis of co-textual and contextual factors. A smaller sample of 214 occurrences is then subjected to a more detailed analysis, using a relational database. We conclude that non-restrictive which-clauses fall into three broad functional type: expansion, evaluation, and affirmation, with the category of evaluation being the most frequent. In all three cases, pragmatic factors, rather than semantic requirements, explicate their use. Our results also show regular collocations with copular verb-froms and with certain types of discourse markers and modal items. Turn-taking is also considered, and three-recurring phenomena are discussed: which-clauses as turn extensions, the occurrence of the NRRC following a response token from the listener, and second-speaker construction of the NRRC. We use the results of our analysis to contribute to current debates on the notion of categories such as subordination in spoken grammar, on grammar and situated interaction, and on the status of probabilities in grammatical description. 
 EndFragment</div>
+		<div>-Locate national conferences in your discipline and find sample abstracts
+-Locate abstracts from disciplinary journals. You can access journals in your field through UCLA Library Research Guides and databases
+</div>
+		<div>Go to next page </div>
+		<div>1. Abstracts do not usually contain citations. </div>
+		<div>2. Review abstracts from your field.</div>
+		<div>Click to learn what a research abstract is</div>
+		<div>-If you do not yet have results, discuss this in your abstract
+-Indicate what you plan to do rather than what you’ve done
+-Also indicate the significance of completing this project
+</div>
+		<div>3. Results are not always necessary.
+</div>
+		<div>-Abstracts should be stand-alone documents with your ideas placed at the forefront
+-An exception to this rule is if your project is extending, modifying, or rebutting a major work. In this case, you will include the citation within the body of the paragraph.
+</div>
+		<div>Abstract Tips</div>
+		<div>5. Proofread before submitting.
+</div>
+		<div>4. Abstracts should be comprehensible.
+</div>
+		<div>Go to previous page </div>
+		<div>-Double-check spelling and grammar
+-Print and read aloud
+-Have friend review your abstract as well
+-Review the guidelines to check for length and format restrictions for the particular journal or conference you are submitting your abstract to 
+</div>
+		<div>-Readers should not need to refer to other work to understand your project
+-Remember to write your abstract with the audience in mind to decide how broad or specific the information should be. 
+</div>
 
 	</div>
 
