--- a/assets/animation/abstract-animation.html
+++ b/assets/animation/abstract-animation.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="abstractanimation_hype_container" style="margin:auto;position:relative;width:800px;height:600px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="abstract-animation.hyperesources/abstractanimation_hype_generated_script.js?71080"></script>
+		<script type="text/javascript" charset="utf-8" src="abstract-animation.hyperesources/abstractanimation_hype_generated_script.js?81582"></script>
 	</div>
 
 	<!-- end copy -->
@@ -40,6 +40,8 @@ Sciences
 </div>
 		<div>Life 
 Sciences
+</div>
+		<div>Click here to compare a ‘good’ vs ‘bad’ abstract
 </div>
 		<div>Research Abstracts</div>
 		<div>Physical
@@ -69,23 +71,23 @@ Methodology
 EndFragment</div>
 		<div>Feliciano, C. (2001). The Benefits of Biculturalism: Exposure to Immigrant Culture and Dropping out of School among Asian and Latino Youths. Social Science Quarterly, 82(4), 865-879. </div>
 		<div>Social Sciences Sample Abstract</div>
-		<div>An abstract is a one-paragraph summary of a research project that includes:
-</div>
-		<div>What is a Research Abstract?</div>
-		<div>An abstract is essentially a snapshot of your research project. It describes your research question or argument, the components and methodology of your project, and the significance of your project. 
-</div>
 		<div>1. An argument or research question
 2. Methodology or conceptual framework
 3. Results or findings
 4. Significance of the findings
 </div>
+		<div>Click to read some tips on how to write an effective abstract</div>
+		<div>What is a Research Abstract?</div>
+		<div>An abstract is essentially a snapshot of your research project. It describes your research question or argument, the components and methodology of your project, and the significance of your project. 
+</div>
+		<div>An abstract is a one-paragraph summary of a research project that includes:
+</div>
 		<div>When you apply to present your work as a paper or poster, you typically have to submit an abstract. Many conferences select participants based primarily on their abstract. When you submit a paper to a journal for publication, you also usually submit an abstract, which accompanies the paper. 
 </div>
-		<div>Click to read some tips on how to write an effective abstract</div>
 		<div>Enhanced identification of synergistic and antagonistic emergent interactions among three or more drugs</div>
 		<div>TITLE: The title should provide a clear description of the research topic. You may find it helpful to use descriptive words and phrases. It is important to keep in mind that your work may be categorized according to its title.
 </div>
-		<div>RESEARCH QUESTION: State your research hypothesis/argument/question here. In this section, you should present the goal of your research. 
+		<div>RESEARCH QUESTION: Clearly state your research hypothesis/argument/question upfront. In this section, you should present the goal of your research. 
 </div>
 		<div>Interactions among drugs play a critical role in the killing efficacy of multi-drug treatments. Recent advances in theory and experiment for three-drug interactions enable the search for emergent interactions—ones not predictable from pairwise interactions. Previous work has shown it is easier to detect synergies and antagonisms among pairwise interactions when a rescaling method is applied to the interaction metric. However, no study has carefully examined whether new types of normalization might be needed for emergence. Here, we propose several rescaling methods for enhancing the classification of the higher order drug interactions based on our conceptual framework. To choose the rescaling that best separates synergism, antagonism and additivity, we conducted bacterial growth experiments in the presence of single, pairwise and triple-drug combinations among 14 antibiotics. We found one of our rescaling methods is far better at distinguishing synergistic and antagonistic emergent interactions than any of the other methods. Using our new method, we find around 50% of emergent interactions are additive, much less than previous reports of greater than 90% additivity. We conclude that higher order emergent interactions are much more common than previously believed, and we argue these findings for drugs suggest that appropriate rescaling is crucial to infer higher order interactions.
 
@@ -195,6 +197,35 @@ EndFragment</div>
 </div>
 		<div>-Readers should not need to refer to other work to understand your project
 -Remember to write your abstract with the audience in mind to decide how broad or specific the information should be. 
+</div>
+		<div>Take a look at a ‘bad’ abstract and try to identify what parts of it can be improved
+</div>
+		<div>Click here to view a good abstract</div>
+		<div>Sample 'Bad’ Abstract:</div>
+		<div>I am interested in investigating if students have learned their math facts using online resources as compared to traditional practice tests and flashcards. Using computers in the computer lab, the teacher’s class of 24 students will work at one or more of several different websites that promote learning math facts. Students spent time in the lab each week. Students kep track of their scores and at the end of the project the students note any improvements or decline in their accuracy and time. Results from this year were compared to class averages from the past three years when students only used the traditional practice tests and flash cards to see if students show any improvement over past classes. </div>
+		<div>Comparing a Good VS Bad Abstract</div>
+		<div>Click here to read about what’s wrong with this abstract</div>
+		<div>Click here to view a bad abstract</div>
+		<div>Click here to read about what makes this abstract good. </div>
+		<div>Sample Good Abstract:</div>
+		<div>Mathematical Education: Modern vs Traditional Approaches
+Mikey Bruin, Education (Class of 2017)
+Research Advisor: Deborah Pacini Hernandez
+</div>
+		<div>Beginning in 1991, a pilot program was introduced to increase the efficacy of early mathematics education. The program sought to replace traditional flashcard and practice test approaches with computerized adaptive testing (CAT) in 19 schools across Southern California. A study conducted by a ‘No Child Left Beind’ research group in 2002 concluded that the CAT tests were effective and lead to increased student retention of mathematical information. The present research revisits these results 24 years after the introduction of the pilot program and aims to refute the original findings. Drawing from studies with students from 32 classes of approximately 24 students per class (a total of 772 students), data collected over a period of 9 months and analysis of timed score results were compared to the scores of the previous three years. Outcomes proved that there is no discernable difference between using only the CAT or only the flashcard method; rather, a combination of both methods yields the highest increase in mathematical retention over time. The findigns of the study have broader implications to fact-based early elementary school education.  </div>
+		<div>Take a look at a ‘good’ abstract and try to think about what makes it effective.</div>
+		<div>1) Title: it lacks a title 
+2) Introduction: it is written in first person and tenses change. There is no context or background information to relevant work in the field.
+3) Argument or research question: poorly written. Research question is not well defined.
+4) Approaches: needs to be more specific
+5) Results/conclusions: no results indicated
+</div>
+		<div>What’s wrong with this abstract?</div>
+		<div>1) Title: Has a title that describes the research project
+2) Introduction: Contextualizes the study by giving background 
+3) Argument or research question: Clearly states the study’s goals and research question 
+4) Approaches: Summarizes the methods used to collect their data
+5) Results/conclusions: Discusses the main findings and their implications in a broader context.
 </div>
 
 	</div>
